# lib_littlecms

./: CMakeLists.txt  LICENSE  README.md
cmake/: util.cmake
opt/: folders.csv
